--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
-    "@formkit/vue": "^1.6.9",
+    "@formkit/vue": "*",
     "axios": "^1.8.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
