--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@formkit/themes": "^1.6.9",
     "@formkit/vue": "*",
     "axios": "^1.8.1",
     "vue": "^3.5.13",
